--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>easy-activity-booking</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>Sports Booking Platform - Book Your Activities</title>
+    <meta name="description" content="Modern sports booking platform with multilingual support. Book swimming sessions, sports fields, and more with ease." />
+    <meta name="author" content="Sports Booking Platform" />
 
-    <meta property="og:title" content="easy-activity-booking" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="Sports Booking Platform" />
+    <meta property="og:description" content="Book your favorite sports activities with our modern platform" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
